--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - pysocial_postgres_data:/var/lib/postgresql/data
     env_file:
       - ./.env.dev
+    ports:
+      - 5432:5432
 
 volumes:
   pysocial_postgres_data:
