--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ djangorestframework = "^3.12.4"
 Pillow = "^8.3.1"
 psycopg2 = "^2.9.1"
 djoser = "^2.1.0"
+drf-yasg = "^1.20.0"
+django-cors-headers = "^3.8.0"
 
 [tool.poetry.dev-dependencies]
 
