--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2 = "^2.9.1"
 djoser = "^2.1.0"
 drf-yasg = "^1.20.0"
 django-cors-headers = "^3.8.0"
+django-mptt = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 
